--- a/.github/workflows/gitguardian.yaml
+++ b/.github/workflows/gitguardian.yaml
@@ -10,8 +10,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # fetch all history so multiple commits can be scanned - name: GitGuardian scan
-          uses: GitGuardian/ggshield/actions/secret@v1.30.1
+          fetch-depth: 0 # fetch all history so multiple commits can be scanned
+      - name: GitGuardian scan
+        uses: GitGuardian/ggshield/actions/secret@v1.30.1
         env:
           GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
           GITHUB_PUSH_BASE_SHA: ${{ github.event.base }}
